--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,16 @@ dependencies:
   google_fonts: ^1.1.2
   material_design_icons_flutter: ^4.0.5855
   shared_preferences: ^2.0.0
-  google_maps_flutter: ^2.0.6
+  google_maps_flutter: ^2.0.1
   flutter_svg: ^0.19.3
+  maps_toolkit: ^1.1.0+2
+  firebase_messaging: ^7.0.3
+  flutter_local_notifications: ^4.0.0
+  device_info: ^2.0.0
+  flutter_paginator: ^0.0.6
+  fluttertoast: ^7.1.8
+  lazy_load_scrollview: ^1.3.0
+  geolocator: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +58,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
-  #   - images/a_dot_burr.jpeg
+    - assets/images/pin.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
